[package]
name = "actix-chat-websockets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.2.0" # Libreria para poder montar el servidor de actix
actix-web-actors="3" # Actors especificos para la web
actix = "0.10.0" # Actors
uuid = { version = "0.8", features = ["v4", "serde"] }